<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/word_number"
        android:title="@string/word"
        app:showAsAction="always" />
    <item
        android:id="@+id/search_word"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/add_word"
        android:icon="@android:drawable/ic_menu_add"
        android:iconTint="#FBFBFB"
        android:title="@string/add"
        app:showAsAction="always" />

    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_edit_word"
        android:title="@string/setting"
        app:showAsAction="never"/>
</menu>