<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="#EAE9EC"
        app:cardCornerRadius="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_hint_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:text="@string/word"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_word_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="#020202"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text_hint_mean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:text="@string/word_meaning"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_word_mean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="#020202"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text_hint_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:text="@string/example_sentence"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_word_sentence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textMultiLine"
                android:lines="3"
                android:maxLines="3"
                android:minLines="1"
                android:padding="10dp"
                android:scrollbars="vertical" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>